New Property object creates an empty collection for photos

--- a/Odin.Data.Tests/Odin.Data.Tests.csproj
+++ b/Odin.Data.Tests/Odin.Data.Tests.csproj
@@ -121,6 +121,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Models\PropertyTests.cs" />
     <Compile Include="Extensions\MockDbSetExtensions.cs" />
     <Compile Include="Persistence\Repositories\ConsultantsRepositoryTests.cs" />
     <Compile Include="Persistence\Repositories\ManagersRepositoryTests.cs" />
