--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Helpers\ServiceHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HousingViewModelTests.cs" />
+    <Compile Include="ViewModels\HousingPropertyViewModelTests.cs" />
     <Compile Include="Views\Helpers\HTMLHelpersTests.cs" />
     <Compile Include="Views\Helpers\MockContext.cs" />
   </ItemGroup>
