Added bookmark code to this solution. Added styling.

--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -300,6 +300,7 @@
     <Compile Include="Controllers\Api\ConsultantsController.cs" />
     <Compile Include="Controllers\Api\ManagersController.cs" />
     <Compile Include="Controllers\Api\OrdersController.cs" />
+    <Compile Include="Controllers\BookMarkletController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Domain\ImageStore.cs" />
@@ -310,6 +311,7 @@
     <Compile Include="Extensions\HttpResponseMessageExtensions.cs" />
     <Compile Include="Filters\AiHandleErrorAttribute.cs" />
     <Compile Include="Filters\ApiAuthorizeAttribute.cs" />
+    <Compile Include="Filters\AuthorizeBookMarklet.cs" />
     <Compile Include="Filters\TokenAuthorizeAttribute.cs" />
     <Compile Include="Filters\ValidationActionFilter.cs" />
     <Compile Include="Global.asax.cs">
@@ -317,6 +319,7 @@
     </Compile>
     <Compile Include="Helpers\AccountHelper.cs" />
     <Compile Include="Helpers\AzureStorageEmulatorManager.cs" />
+    <Compile Include="Helpers\BookMarkletHelper.cs" />
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Helpers\DateHelper.cs" />
     <Compile Include="Helpers\EmailHelper.cs" />
@@ -351,6 +354,7 @@
     <Compile Include="ViewModels\Authentication\SetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Authentication\VerifyCodeViewModel.cs" />
     <Compile Include="ViewModels\Authentication\VerifyPhoneNumberViewModel.cs" />
+    <Compile Include="ViewModels\BookMarklet\BookMarkletViewModel.cs" />
     <Compile Include="ViewModels\Mailers\CreatePasswordViewModel.cs" />
     <Compile Include="ViewModels\Mailers\ResetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Orders\Index\OrdersIndexViewModel.cs" />
@@ -380,6 +384,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\bookmarklet.css">
+      <DependentUpon>bookmarklet.scss</DependentUpon>
+    </Content>
+    <Content Include="Content\css\bookmarklet.min.css">
+      <DependentUpon>bookmarklet.css</DependentUpon>
+    </Content>
     <Content Include="Content\css\transferee\details.css">
       <DependentUpon>details.scss</DependentUpon>
     </Content>
@@ -696,6 +706,8 @@
     <Content Include="Scripts\app\views\transferee.js" />
     <Content Include="Scripts\app\views\forgotPassword.js" />
     <Content Include="Scripts\app\views\orders.js" />
+    <Content Include="Scripts\bookmarklet\bookmarklet.js" />
+    <Content Include="Scripts\bookmarklet\index.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\bootstrap-notify.min.js" />
@@ -729,6 +741,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\css\primaryNav.scss" />
+    <Content Include="Content\css\bookmarklet.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -880,6 +893,10 @@
     <Content Include="Views\Orders\Partials\_Itinerary.cshtml" />
     <Content Include="Views\Orders\Partials\_Messages.cshtml" />
     <Content Include="Views\Orders\Partials\_History.cshtml" />
+    <Content Include="Views\BookMarklet\Error.cshtml" />
+    <Content Include="Views\BookMarklet\Index.cshtml" />
+    <Content Include="Views\BookMarklet\Shared\_BookMarklet.cshtml" />
+    <Content Include="Views\BookMarklet\Add.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
