--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Core\Repositories\IChildrenRepository.cs" />
     <Compile Include="Core\Repositories\IConsultantsRepository.cs" />
     <Compile Include="Core\Repositories\IDepositTypesRepository.cs" />
+    <Compile Include="Core\Repositories\IHomeFindingPropertyRepository.cs" />
     <Compile Include="Core\Repositories\IHousingTypesRepository.cs" />
     <Compile Include="Core\Repositories\IManagersRepository.cs" />
     <Compile Include="Core\Repositories\INumberOfBathroomsTypesRepository.cs" />
@@ -208,6 +209,7 @@
     <Compile Include="Persistence\EntityConfigurations\HomeFindingPropertiesConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\OrderConfiguration.cs" />
     <Compile Include="Persistence\EntityConfigurations\HomeFindingConfiguration.cs" />
+    <Compile Include="Persistence\HomeFindingPropertyRepository.cs" />
     <Compile Include="Persistence\HousingTypesRepository.cs" />
     <Compile Include="Persistence\IApplicationDbContext.cs" />
     <Compile Include="Persistence\ManagersRepository.cs" />
