--- a/Odin/packages.config
+++ b/Odin/packages.config
@@ -71,6 +71,7 @@
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net461" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
