--- a/Odin.Data/packages.config
+++ b/Odin.Data/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
