--- a/Odin.Data.Tests/Odin.Data.Tests.csproj
+++ b/Odin.Data.Tests/Odin.Data.Tests.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="Core\Models\PropertyTests.cs" />
     <Compile Include="Extensions\MockDbSetExtensions.cs" />
+    <Compile Include="Extensions\StringExtensionsTests.cs" />
     <Compile Include="Persistence\Repositories\ConsultantsRepositoryTests.cs" />
     <Compile Include="Persistence\Repositories\ManagersRepositoryTests.cs" />
     <Compile Include="Persistence\Repositories\OrdersRepositoryTests.cs" />
@@ -138,6 +139,9 @@
       <Project>{0d2c0b84-daff-4f5c-97d9-1c3bc5871b4c}</Project>
       <Name>Odin.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
