--- a/Odin.PropBotWebJob/App.config
+++ b/Odin.PropBotWebJob/App.config
@@ -13,6 +13,10 @@
   </connectionStrings>
   <appSettings>
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="SendGridAPIKey" value="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" />
+    <add key="EmailErrorTo" value="odin@dwellworks.com;shane.poloha@dwellworks.com;austin.emser@dwellworks.com" />
+    <add key="EmailErrorFrom" value="odin@dwellworks.com" />
+    <add key="MaxDequeueCount" value="5" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -66,6 +70,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Data" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Azure.Mobile.Server.Tables" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Azure.Mobile.Server" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
