--- a/Odin.PropBotWebJob/packages.config
+++ b/Odin.PropBotWebJob/packages.config
@@ -9,23 +9,27 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.5.1" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Mobile.Server" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Mobile.Server.Entity" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.Mobile.Server.Tables" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="1.1.157.1" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="1.1.157.1" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.Core" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.WebJobs.Extensions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net461" />
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
+  <package id="ncrontab" version="3.3.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net461" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
@@ -46,7 +50,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.0.11" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
