Add endpoint helper tests, create service processor

--- a/Odin.ToSeWebJob/App.Staging.config
+++ b/Odin.ToSeWebJob/App.Staging.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="SeApiToken" value="#{SeApiToken}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="BaldrApiUrl" value="#{BaldrApiUrl}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
 
   <connectionStrings>
     <add name="DefaultConnection"
