Added tests for bookmarklet controller, and made web job testable.

--- a/Odin.IntegrationTests/Odin.IntegrationTests.csproj
+++ b/Odin.IntegrationTests/Odin.IntegrationTests.csproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\Api\ConsultantsControllerTests.cs" />
+    <Compile Include="Controllers\BookMarkletControllerTests.cs" />
     <Compile Include="Controllers\HomeFindingPropertiesControllerTests.cs" />
     <Compile Include="Controllers\Api\ManagersControllerTests.cs" />
     <Compile Include="Extensions\HttpActionResultExtensions.cs" />
