--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <Compile Include="Controllers\Api\AccountControllerTests.cs" />
     <Compile Include="Controllers\Api\OrdersControllerTests.cs" />
+    <Compile Include="Controllers\BookMarkletControllerTests.cs" />
     <Compile Include="Controllers\OrdersControllerTests.cs" />
     <Compile Include="Domain\ConsultantImporterTests.cs" />
     <Compile Include="Domain\ManagerImporterTests.cs" />
