--- a/Odin.ToSeWebJob.Tests/packages.config
+++ b/Odin.ToSeWebJob.Tests/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net461" />
+  <package id="Dwellworks.ServicEngine.ServicEngineImporter" version="1.0.0.6" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net461" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
