Change odintosewebjob token key

--- a/Odin.ToSeWebJob/App.Staging.config
+++ b/Odin.ToSeWebJob/App.Staging.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <appSettings>
-    <add key="SeApiToken" value="#{SeApiToken}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SeBaldrToken" value="#{SeBaldrToken}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="BaldrApiUrl" value="#{BaldrApiUrl}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
