--- a/Odin.ToSeWebJob/App.config
+++ b/Odin.ToSeWebJob/App.config
@@ -89,7 +89,7 @@
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
 
-    <add key="SeApiToken" value="VtADQse3uRTspdtGjSgp" />
+    <add key="SeBaldrToken" value="VtADQse3uRTspdtGjSgp" />
     <add key="BaldrApiUrl" value="https://localhost:44372/api/" />
   </appSettings>
   <system.web>
