--- a/Odin.ToSeWebJob/App.Release.config
+++ b/Odin.ToSeWebJob/App.Release.config
@@ -16,7 +16,7 @@
   -->
 
   <appSettings>
-    <add key="SeApiToken" value="#{SeApiToken}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="SeBaldrToken" value="#{SeBaldrToken}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="BaldrApiUrl" value="#{BaldrApiUrl}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
